# pliantdb-gooey-counter-example

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
browser/: index.html
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
xtask/src/: main.rs
