[workspace]
members = ["client", "server", "shared"]

[patch.crates-io]
# fabruic = { path = "../fabruic", version = "0.0.1-dev.2" }
actionable = { git = "https://github.com/khonsulabs/actionable.git", branch = "main", version = "0.1.0-dev.2" }

[patch."https://github.com/khonsulabs/gooey.git"]
gooey = { path = "../gooey/gooey", branch = "main" }

[patch."https://github.com/khonsulabs/kludgine.git"]
kludgine = { path = "../kludgine/kludgine", branch = "main" }

[patch."https://github.com/khonsulabs/pliantdb.git"]
pliantdb = { path = "../pliantdb/pliantdb", branch = "main" }
