[package]
name = "client"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
pliantdb = { git = "https://github.com/khonsulabs/pliantdb.git", branch = "main", features = ["client-full"] }
log = "0.4"
flume = "0.10"


[target.'cfg(target_arch = "wasm32")'.dependencies]
gooey = { git = "https://github.com/khonsulabs/gooey.git", branch = "main", features = ["frontend-browser"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gooey = { git = "https://github.com/khonsulabs/gooey.git", branch = "main", features = ["frontend-kludgine"] }
tokio = { version = "1", features = ["full"] }
