[package]
name = "client"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path="../shared" }
pliantdb = { git="https://github.com/khonsulabs/pliantdb.git", branch="wasm-client", features=[
    "client",
    "client-websockets",
    "client-pubsub",
    "client-keyvalue",
] }
log = "0.4"
flume = "0.10"
async-trait = "0.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
gooey = { git="https://github.com/khonsulabs/gooey.git", branch="main", default-features=false, features=["frontend-browser", "async"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gooey = { git="https://github.com/khonsulabs/gooey.git", branch="main", default-features=false, features=["frontend-kludgine", "async"] }
